kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserverstack
spec:
  replicas: 3
  selector:
    matchLabels:
      name: nginx-mysql
  template:
    metadata:
      name: nginx-mysql
      labels:
        name: nginx-mysql
    spec:
      containers:
      - name: webservice
        image: darywinata/nginx:0.1
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    name: nginx-mysql
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-expose
  labels:
      name: nginx-expose
spec:
  rules:
  - host: service.darywinata.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port: 
             number: 80
